# fineweb-2-edu-japanese-classifier

./: .gitignore  README.md  binary_classifier.py  classifier_cpu_binary.py  classifier_gpu_scorer.py  efficient_classifier_gpu_score.py  pyproject.toml  scorer.py  scorer_prompt.txt  trainer.py  trainer_fasttext.py  trainer_lightgbm.py  trainer_lightgbm_binary.py
